paar warnings weg